Corrected Feedback from Derek: 	- Fix Elevation so that all elements begin at 3 (Elements on top of elements increase 3 again) 	- Correct font. Now using Roboto. 	- Fixed View Claims dropdown menu so all information is on one line 		Removed useless border 		Removed unecessary space
Corrected Feedback from Dante
	- Changed status shifters to "Regress Status" and "Advance Status"
		- (Regress Claim Status is a bit too much text for a button)

--- a/frontend/insurance/src/app/modules/view-claims/view-claims.component.scss
+++ b/frontend/insurance/src/app/modules/view-claims/view-claims.component.scss
@@ -19,6 +19,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 .example-element-detail {
+  float: left;
   overflow: hidden;
   display: flex;
 }
@@ -55,4 +56,19 @@ tr.example-element-row:not(.example-expanded-row):active {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.left-expand {
+  width: 25%;
+  height: auto;
+}
+
+.right-expand {
+  width: 33%;
+  height: auto;
+}
+
+.center-expand {
+  width: 33%;
+  height: auto;
 }
