--- a/frontend/insurance/src/sass/core/edit-claim.scss
+++ b/frontend/insurance/src/sass/core/edit-claim.scss
@@ -1,10 +1,5 @@
 @import '../theme.scss';
 
-.vehicle-information {
-  border: 1px solid darkgray;
-  border-radius: 5px;
-}
-
 .edit-field {
   color: darkgray;
 }
